# OpenGL_RayTracer

./: BVH.hpp  CMakeLists.txt  Camera.h  Model.hpp  ObjectTexture.h  README.md  RT_Screen.h  RayTracerFragmentShader.glsl  Structure.hpp  main.cpp
